refactor: add .gitignore and configure default route

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ docs/_book
 test/
 
 # End of https://www.toptal.com/developers/gitignore/api/go,vue,visualstudiocode
+
+.env
+client/.env
+server/.env
