refactor: enhance logic

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ docs/_book
 
 # TODO: where does this rule come from?
 test/
-
+tmp
 # End of https://www.toptal.com/developers/gitignore/api/go,vue,visualstudiocode
 
 .env
